--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,16 @@
-# VUE_APP_API='開發階段'
-# http://localhost:3000/
+NODE_ENV = development
+
+VUE_APP_WEB_VERSION = 12.01.18
+VUE_APP_OIDC_AUTHORITY = http://localhost:12796
+VUE_APP_OIDC_CLIENTID = OpenAuth.Pro
+VUE_APP_OIDC_REDIRECTURI = http://localhost:1803/#/oidc-callback
+VUE_APP_OIDC_POSTLOGOUTREDIRECTURI = http://localhost:1803
+VUE_APP_OIDC_RESPONSETYPE = code
+VUE_APP_OIDC_SCOPE = openid profile openauthapi
+VUE_APP_OIDC_AUTOMATICSILENTRENEW = true
+VUE_APP_OIDC_SILENTREDIRECTURI = http://localhost:1803/silent-renew-oidc.html
+VUE_APP_APP_KEY = openauthbasic
+
+VUE_APP_WEB_TITLE = 基礎後台
+VUE_APP_BASE_API = http://simpleweb.unitgo.tw/api/
+VUE_APP_BASE_IMG_URL = http://simpleweb.unitgo.tw/ 
