--- a/.env.development
+++ b/.env.development
@@ -12,5 +12,5 @@ VUE_APP_OIDC_SILENTREDIRECTURI = http://localhost:1803/silent-renew-oidc.html
 VUE_APP_APP_KEY = openauthbasic
 
 VUE_APP_WEB_TITLE = 基礎後台
-VUE_APP_BASE_API = http://simpleweb.unitgo.tw/api/
-VUE_APP_BASE_IMG_URL = http://simpleweb.unitgo.tw/ 
+VUE_APP_BASE_API = http://oss.yummydesign.com.tw/sys/api/
+VUE_APP_BASE_IMG_URL = http://oss.yummydesign.com.tw/sys/webcontent/
