--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vue-sweetalert2": "^3.0.6",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
