--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-loading-overlay": "^3.3.2",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.4.0",
     "vue-sweetalert2": "^3.0.6",
-    "vue2-editor": "^2.10.2"
+    "vue2-editor": "^2.10.2",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
