--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,4 @@ VUE_APP_APP_KEY = openauthbasic
 VUE_APP_WEB_TITLE = 基礎後台
 VUE_APP_BASE_API = http://oss.yummydesign.com.tw/sys/api/
 VUE_APP_BASE_IMG_URL = http://oss.yummydesign.com.tw/sys/webcontent/
+VUE_APP_SITE_KEY=6LdzSxcaAAAAAN1N9ywC6BU5UtsrzuaYvaeRF1S3
