--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-sweetalert2": "^3.0.6",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.2.11",
+    "vue-recaptcha": "^1.3.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
